<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineTopMargin"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.05"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineBottomMargin"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.95"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineLeftMargin"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.1"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineRightMargin"
                                          android:orientation="vertical" app:layout_constraintGuide_percent="0.9"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guidelineSplitter"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.75"/>
    <ViewFlipper android:layout_width="0dp" android:layout_height="0dp"
                 android:id="@+id/viewFlipper"
                 android:flipInterval="@integer/flip_interval"
                 app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
                 app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
                 app:layout_constraintTop_toTopOf="@+id/guidelineTopMargin" app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintBottom_toTopOf="@+id/guidelineSplitter"
                 app:layout_constraintVertical_chainStyle="spread">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_die_side_1"
                android:id="@+id/imageViewDiceSide1"
                android:contentDescription="@string/content_description_die_side_1"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_die_side_2"
                android:id="@+id/imageViewDiceSide2"
                android:contentDescription="@string/content_description_die_side_2"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_die_side_3"
                android:id="@+id/imageViewDiceSide3"
                android:contentDescription="@string/content_description_die_side_3"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_die_side_4"
                android:id="@+id/imageViewDiceSide4"
                android:contentDescription="@string/content_description_die_side_4"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_die_side_5"
                android:id="@+id/imageViewDiceSide5"
                android:contentDescription="@string/content_description_die_side_5"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/ic_die_side_6"
                android:id="@+id/imageViewDiceSide6"
                android:contentDescription="@string/content_description_die_side_6"/>
    </ViewFlipper>
    <Button
            android:text="@string/label_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRoll"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRightMargin"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeftMargin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/viewFlipper"
            app:layout_constraintBottom_toTopOf="@+id/guidelineBottomMargin"
    />
</android.support.constraint.ConstraintLayout>